--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="counselor-grid">
-      <button onclick="sendEmail('dtansey@smpanthers.org')">dtansey@smpanthers.org</button>
+      <button onclick="sendEmail('miap2k10@gmail.com')">miap2k10@gmail.com</button>
       <button onclick="sendEmail('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
       <button onclick="sendEmail('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
       <button onclick="sendEmail('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
