--- a/index.html
+++ b/index.html
@@ -2,59 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Support</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    <!-- Page 1: Reason Selection -->
+    <div class="page active" id="page1">
+      <img src="page1.png" alt="Welcome Page">
 
-<!-- PAGE 1: REASON -->
-<div class="page active" id="page1">
-  <img src="page1.png" />
+      <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
+      <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
+      <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
+      <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
+      <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
+      <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
+      <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
+      <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
+    </div>
 
-  <button class="hotspot academic" onclick="chooseReason('Academic')"></button>
-  <button class="hotspot anxiety" onclick="chooseReason('Anxiety')"></button>
-  <button class="hotspot depression" onclick="chooseReason('Depression')"></button>
-  <button class="hotspot family" onclick="chooseReason('Family')"></button>
-  <button class="hotspot relationship" onclick="chooseReason('Relationship')"></button>
-  <button class="hotspot bullying" onclick="chooseReason('Bullying')"></button>
-  <button class="hotspot talk" onclick="chooseReason('Talk')"></button>
-  <button class="hotspot unsure" onclick="chooseReason('Unsure')"></button>
-</div>
+    <!-- Page 2: Urgency Selection -->
+    <div class="page" id="page2">
+      <img src="page2.png" alt="Urgency Page">
 
-<!-- PAGE 2: URGENCY -->
-<div class="page" id="page2">
-  <img src="page2.png" />
+      <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
+      <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
+      <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
+      <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
 
-  <button class="hotspot fine" onclick="chooseUrgency('Green')"></button>
-  <button class="hotspot littleoff" onclick="chooseUrgency('Yellow')"></button>
-  <button class="hotspot coping" onclick="chooseUrgency('Orange')"></button>
-  <button class="hotspot crisis" onclick="chooseUrgency('Red')"></button>
+      <button class="back-button" onclick="goToPage('page1')">Back</button>
+    </div>
 
-  <button onclick="goToPage('page1')">Back</button>
-</div>
+    <!-- Page 3: Counselor Selection + Name Input -->
+    <div class="page" id="page3">
+      <img src="page3.png" alt="Counselor Page">
 
-<!-- PAGE 3: COUNSELOR -->
-<div class="page" id="page3">
-  <img src="page3.png" />
+      <div class="input-container">
+        <input type="text" id="studentName" placeholder="Your Name" />
+        <input type="text" id="studentGrade" placeholder="Your Grade" />
+      </div>
 
-  <input id="studentName" placeholder="Your Name">
-  <input id="studentGrade" placeholder="Grade">
+      <div class="counselor-grid">
+        <button onclick="sendEmail('miap2k10@gmail.com')">miap2k10@gmail.com</button>
+        <button onclick="sendEmail('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+        <button onclick="sendEmail('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+        <button onclick="sendEmail('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+        <button onclick="sendEmail('aturner@smpanthers.org')">aturner@smpanthers.org</button>
+        <button onclick="sendEmail('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+      </div>
 
-  <div id="previewBox"></div>
+      <button class="back-button" onclick="goToPage('page2')">Back</button>
+    </div>
 
-  <div class="counselor-grid">
-    <button onclick="sendRequest('miap2k10@gmail.com')">Mia</button>
-    <button onclick="sendRequest('kmcconnell@smpanthers.org')">McConnell</button>
-    <button onclick="sendRequest('gsorbi@smpanthers.org')">Sorbi</button>
-    <button onclick="sendRequest('apanlilio@smpanthers.org')">Panlilio</button>
-    <button onclick="sendRequest('aturner@smpanthers.org')">Turner</button>
-    <button onclick="sendRequest('cfilson@smpanthers.org')">Filson</button>
-  </div>
+    <script src="script.js"></script>
 
-  <button onclick="goToPage('page2')">Back</button>
-</div>
-
-<script src="student.js"></script>
 </body>
 </html>
