--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
   <title>Student Support</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
 <div class="page active" id="page1">
-  <img src="page1.png" />
+  <img src="page1.png">
   <button class="hotspot academic" onclick="chooseReason('Academic stress')"></button>
   <button class="hotspot anxiety" onclick="chooseReason('Anxiety')"></button>
   <button class="hotspot depression" onclick="chooseReason('Depression')"></button>
   <button class="hotspot family" onclick="chooseReason('Family issues')"></button>
+  <button class="hotspot relationship" onclick="chooseReason('Relationship issues')"></button>
+  <button class="hotspot bullying" onclick="chooseReason('Bullying')"></button>
+  <button class="hotspot talk" onclick="chooseReason('Need to talk')"></button>
+  <button class="hotspot unsure" onclick="chooseReason('Not ready to say')"></button>
 </div>
 
 <div class="page" id="page2">
-  <img src="page2.png" />
+  <img src="page2.png">
   <button class="hotspot fine" onclick="chooseUrgency('Low')"></button>
   <button class="hotspot littleoff" onclick="chooseUrgency('Medium Low')"></button>
   <button class="hotspot coping" onclick="chooseUrgency('Medium High')"></button>
@@ -25,10 +28,10 @@
 </div>
 
 <div class="page" id="page3">
-  <img src="page3.png" />
+  <img src="page3.png">
 
   <input id="studentName" placeholder="Your Name">
-  <input id="studentGrade" placeholder="Grade">
+  <input id="studentGrade" placeholder="Your Grade">
 
   <div class="counselor-grid">
     <button onclick="previewMessage('miap2k10@gmail.com')">Mia</button>
@@ -43,4 +46,5 @@
 <script src="student.js"></script>
 </body>
 </html>
+
 
