--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <button class="back-button" onclick="goToPage('page2')">Back</button>
     </div>
 
-    <script src="script.js"></script>
+<script src="student.js"></script>
 
 </body>
 </html>
+
