--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <button class="back-button" onclick="goToPage('page2')">Back</button>
     </div>
 
-<script src="student.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
