--- a/index.html
+++ b/index.html
@@ -5,14 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Support</title>
   <link rel="stylesheet" href="style.css" />
+
+  <style>
+    /* MODAL */
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .modal-box {
+      background: #fff;
+      padding: 25px;
+      width: 350px;
+      border-radius: 10px;
+      text-align: left;
+    }
+
+    .modal-box h3 {
+      margin-top: 0;
+    }
+
+    .modal-box input,
+    .modal-box textarea {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 8px;
+      font-size: 14px;
+    }
+
+    .modal-actions {
+      display: flex;
+      justify-content: space-between;
+    }
+  </style>
 </head>
 
 <body>
 
-  <!-- Page 1: Reason Selection -->
+  <!-- Page 1 -->
   <div class="page active" id="page1">
     <img src="page1.png" alt="Welcome Page">
-
     <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
     <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
     <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
@@ -23,41 +60,50 @@
     <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
   </div>
 
-  <!-- Page 2: Urgency Selection -->
+  <!-- Page 2 -->
   <div class="page" id="page2">
     <img src="page2.png" alt="Urgency Page">
-
     <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
     <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
     <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
     <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
-
     <button class="back-button" onclick="goToPage('page1')">Back</button>
   </div>
 
-  <!-- Page 3: Counselor Selection + Required Info -->
+  <!-- Page 3 -->
   <div class="page" id="page3">
     <img src="page3.png" alt="Counselor Page">
 
-    <div class="input-container">
-      <input type="text" id="firstName" placeholder="First Name (required)" />
-      <input type="text" id="lastName" placeholder="Last Name (required)" />
-      <input type="text" id="studentGrade" placeholder="Grade (required)" />
-    </div>
-
     <div class="counselor-grid">
-      <button onclick="sendEmail('miap2k10@gmail.com')">miap2k10@gmail.com</button>
-      <button onclick="sendEmail('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-      <button onclick="sendEmail('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-      <button onclick="sendEmail('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-      <button onclick="sendEmail('aturner@smpanthers.org')">aturner@smpanthers.org</button>
-      <button onclick="sendEmail('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+      <button onclick="openModal('miap2k10@gmail.com')">miap2k10@gmail.com</button>
+      <button onclick="openModal('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+      <button onclick="openModal('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+      <button onclick="openModal('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+      <button onclick="openModal('aturner@smpanthers.org')">aturner@smpanthers.org</button>
+      <button onclick="openModal('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
     </div>
 
     <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
 
-  <script src="script.js"></script>
+  <!-- MODAL -->
+  <div class="modal" id="infoModal">
+    <div class="modal-box">
+      <h3>Your Information</h3>
 
+      <input id="firstName" placeholder="First Name (required)">
+      <input id="lastName" placeholder="Last Name (required)">
+      <input id="studentGrade" placeholder="Grade (required)">
+      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
+
+      <div class="modal-actions">
+        <button onclick="closeModal()">Cancel</button>
+        <button onclick="submitMessage()">Send</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
