--- a/index.html
+++ b/index.html
@@ -8,37 +8,42 @@
 
   <style>
     /* MODAL */
-    .modal {
-      display: none;
+    .modal-overlay {
       position: fixed;
       inset: 0;
       background: rgba(0,0,0,0.5);
+      display: none;
       justify-content: center;
       align-items: center;
-      z-index: 999;
+      z-index: 1000;
     }
 
-    .modal-box {
-      background: #fff;
+    .modal {
+      background: white;
       padding: 25px;
-      width: 350px;
-      border-radius: 10px;
+      width: 360px;
+      border-radius: 12px;
       text-align: left;
     }
 
-    .modal-box h3 {
+    .modal h2 {
       margin-top: 0;
     }
 
-    .modal-box input,
-    .modal-box textarea {
+    .modal input,
+    .modal textarea {
       width: 100%;
-      margin-bottom: 10px;
       padding: 8px;
+      margin-bottom: 12px;
       font-size: 14px;
     }
 
-    .modal-actions {
+    .modal textarea {
+      resize: none;
+      height: 80px;
+    }
+
+    .modal-buttons {
       display: flex;
       justify-content: space-between;
     }
@@ -50,6 +55,7 @@
   <!-- Page 1 -->
   <div class="page active" id="page1">
     <img src="page1.png" alt="Welcome Page">
+
     <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
     <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
     <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
@@ -63,10 +69,12 @@
   <!-- Page 2 -->
   <div class="page" id="page2">
     <img src="page2.png" alt="Urgency Page">
+
     <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
     <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
     <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
     <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
+
     <button class="back-button" onclick="goToPage('page1')">Back</button>
   </div>
 
@@ -87,23 +95,25 @@
   </div>
 
   <!-- MODAL -->
-  <div class="modal" id="infoModal">
-    <div class="modal-box">
-      <h3>Your Information</h3>
+  <div class="modal-overlay" id="modalOverlay">
+    <div class="modal">
+      <h2>Submit Message</h2>
 
-      <input id="firstName" placeholder="First Name (required)">
-      <input id="lastName" placeholder="Last Name (required)">
-      <input id="studentGrade" placeholder="Grade (required)">
+      <input type="text" id="firstName" placeholder="First Name (required)">
+      <input type="text" id="lastName" placeholder="Last Name (required)">
+      <input type="text" id="studentGrade" placeholder="Grade (required)">
       <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
 
-      <div class="modal-actions">
+      <div class="modal-buttons">
         <button onclick="closeModal()">Cancel</button>
-        <button onclick="submitMessage()">Send</button>
+        <button onclick="submitMessage()">Submit</button>
       </div>
     </div>
   </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
+
 
