--- a/index.html
+++ b/index.html
@@ -7,113 +7,152 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* MODAL */
+    /* MODAL OVERLAY */
     .modal-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0,0,0,0.45);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 1000;
     }
 
+    /* MODAL BOX */
     .modal {
-      background: white;
-      padding: 25px;
-      width: 360px;
-      border-radius: 12px;
+      background: #ffffff;
+      padding: 28px;
+      width: 380px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
       text-align: left;
     }
 
     .modal h2 {
-      margin-top: 0;
+      margin: 0 0 18px;
+      font-size: 22px;
+      text-align: center;
+    }
+
+    .modal label {
+      display: block;
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 4px;
     }
 
     .modal input,
     .modal textarea {
       width: 100%;
-      padding: 8px;
-      margin-bottom: 12px;
+      padding: 10px 12px;
+      margin-bottom: 14px;
       font-size: 14px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
     }
 
     .modal textarea {
       resize: none;
-      height: 80px;
+      height: 90px;
     }
 
     .modal-buttons {
       display: flex;
       justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    .modal-buttons button {
+      padding: 10px 18px;
+      font-size: 14px;
+      border-radius: 20px;
+      cursor: pointer;
+      border: none;
+    }
+
+    .cancel-btn {
+      background: #eee;
+      color: #333;
+    }
+
+    .submit-btn {
+      background: #0070c9;
+      color: white;
+    }
+
+    .submit-btn:hover {
+      background: #005fa8;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- Page 1 -->
-  <div class="page active" id="page1">
-    <img src="page1.png" alt="Welcome Page">
+<!-- PAGE 1 -->
+<div class="page active" id="page1">
+  <img src="page1.png">
+  <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
+  <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
+  <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
+  <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
+  <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
+  <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
+  <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
+  <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
+</div>
 
-    <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
-    <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
-    <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
-    <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
-    <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
-    <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
-    <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
-    <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
+<!-- PAGE 2 -->
+<div class="page" id="page2">
+  <img src="page2.png">
+  <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
+  <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
+  <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
+  <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
+  <button class="back-button" onclick="goToPage('page1')">Back</button>
+</div>
+
+<!-- PAGE 3 -->
+<div class="page" id="page3">
+  <img src="page3.png">
+  <div class="counselor-grid">
+    <button onclick="openModal('miap2k10@gmail.com')">miap2k10@gmail.com</button>
+    <button onclick="openModal('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+    <button onclick="openModal('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+    <button onclick="openModal('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+    <button onclick="openModal('aturner@smpanthers.org')">aturner@smpanthers.org</button>
+    <button onclick="openModal('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
   </div>
+  <button class="back-button" onclick="goToPage('page2')">Back</button>
+</div>
 
-  <!-- Page 2 -->
-  <div class="page" id="page2">
-    <img src="page2.png" alt="Urgency Page">
+<!-- MODAL -->
+<div class="modal-overlay" id="modalOverlay">
+  <div class="modal">
+    <h2>Submit Message</h2>
 
-    <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
-    <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
-    <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
-    <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
+    <label>First Name *</label>
+    <input type="text" id="firstName">
 
-    <button class="back-button" onclick="goToPage('page1')">Back</button>
-  </div>
+    <label>Last Name *</label>
+    <input type="text" id="lastName">
 
-  <!-- Page 3 -->
-  <div class="page" id="page3">
-    <img src="page3.png" alt="Counselor Page">
+    <label>Grade *</label>
+    <input type="text" id="studentGrade">
 
-    <div class="counselor-grid">
-      <button onclick="openModal('miap2k10@gmail.com')">miap2k10@gmail.com</button>
-      <button onclick="openModal('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-      <button onclick="openModal('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-      <button onclick="openModal('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-      <button onclick="openModal('aturner@smpanthers.org')">aturner@smpanthers.org</button>
-      <button onclick="openModal('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+    <label>Additional Notes (optional)</label>
+    <textarea id="extraNotes"></textarea>
+
+    <div class="modal-buttons">
+      <button class="cancel-btn" onclick="closeModal()">Cancel</button>
+      <button class="submit-btn" onclick="submitMessage()">Submit</button>
     </div>
-
-    <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
+</div>
 
-  <!-- MODAL -->
-  <div class="modal-overlay" id="modalOverlay">
-    <div class="modal">
-      <h2>Submit Message</h2>
-
-      <input type="text" id="firstName" placeholder="First Name (required)">
-      <input type="text" id="lastName" placeholder="Last Name (required)">
-      <input type="text" id="studentGrade" placeholder="Grade (required)">
-      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
-
-      <div class="modal-buttons">
-        <button onclick="closeModal()">Cancel</button>
-        <button onclick="submitMessage()">Submit</button>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-
+<script src="script.js"></script>
 </body>
 </html>
+
 
 
